metadataFolder/objects/Lead.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Director can check if they want the lead approved or not</description>
        <inlineHelpText>Director has approved the lead</inlineHelpText>
        <label>Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discouraged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does not meet some or all the requirements needed to qualify.</description>
        <inlineHelpText>Does not meet some or all the requirements needed to qualify.</inlineHelpText>
        <label>Discouraged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grants_Deals_Agreements__c</fullName>
        <description>Funding rewarded by the DoE</description>
        <label>Grants/Deals/Agreements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FOA_Grants</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <formula>CASE(  Industry  , 

&quot;Administrative Management and General Management Consulting Services&quot;, &quot;541611&quot;, 

&quot;Other Scientific and Technical Consulting Services&quot;, &quot;541689&quot;, 

&quot;Engineering Services&quot;, &quot;541330&quot;, 

&quot;Facilities Support Services&quot;, &quot;561210&quot;, 

&quot;Public Relations Agencies&quot;, &quot;541820&quot;, 

&quot;Computer Systems Design Services&quot;, &quot;541512&quot;, 

&quot;Other Computer Related Services&quot;, &quot;541519&quot;, 

&quot;Internet Publishing and Broadcasting and Web Search Portals&quot;, &quot;519130&quot;, 

&quot;Other Management Consulting Services&quot;, &quot;541618&quot;, 

&quot;PHOTOGRAPHIC AND PHOTOCOPYING EQUIPMENT MANUFACTURING&quot;, &quot;333316&quot;,

&quot;&quot;)</formula>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Services_Offered__c</fullName>
        <description>What products and services does the client offer?</description>
        <inlineHelpText>What products and services does the client offer?</inlineHelpText>
        <label>Products/Services Offered</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                    <default>true</default>
                    <label>North</label>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_work__c</fullName>
        <description>Type of work done by the client</description>
        <inlineHelpText>What kind of work does the client do?</inlineHelpText>
        <label>Type of work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>Web_to_Lead_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Web-to-Lead-East</label>
        <queue>Web_to_Lead_East</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Web_to_Lead_North_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Web-to-Lead-North</label>
        <queue>Web_to_Lead_North</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Web_to_Lead_South_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Web-to-Lead-South</label>
        <queue>Web_to_Lead_South</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Web_to_Lead_West_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Web-to-Lead-West</label>
        <queue>Web_to_Lead_West</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>